main/default/objects/Event_Role__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Roles</relationshipLabel>
    <relationshipName>Event_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>