main/default/objects/Event_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Roles</relationshipLabel>
    <relationshipName>Event_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>