main/default/objects/Event_Role__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>CCN-EVE-1220-DV: This field is for the sort order of the roles in the related list and in the event page.</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>