main/default/objects/Event_Role__c/fields/Show_in_Event_Site__c.field-meta.xml
<CustomField>
    <fullName>Show_in_Event_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show in Event Site</label>
    <type>Checkbox</type>
</CustomField>